{
  "version": 4,
  "terraform_version": "1.15.5",
  "serial": 48,
  "lineage": "fe87ba6b-2c33-ef72-c9da-4b4e75649625",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:984601295324:security-group/sg-0417b505b51f66b98",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-0417b505b51f66b98",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "984601295324",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "vpc_id": "vpc-0892a97c16bd1e930"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "default-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:984601295324:security-group/sg-833384e8",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-833384e8",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "984601295324",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "vpc_id": "vpc-d90e86b1"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_default_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:984601295324:vpc/vpc-d90e86b1",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.31.0.0/16",
            "default_network_acl_id": "acl-25f7844d",
            "default_route_table_id": "rtb-6efebb06",
            "default_security_group_id": "sg-833384e8",
            "dhcp_options_id": "dopt-81e242e9",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "existing_default_vpc": true,
            "force_destroy": false,
            "id": "vpc-d90e86b1",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-6efebb06",
            "owner_id": "984601295324"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:984601295324:internet-gateway/igw-0d57417526f321380",
            "id": "igw-0d57417526f321380",
            "owner_id": "984601295324",
            "tags": {
              "Name": "dev-demo-vpc-igw"
            },
            "tags_all": {
              "Name": "dev-demo-vpc-igw"
            },
            "vpc_id": "vpc-0892a97c16bd1e930"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:984601295324:network-acl/acl-05a0bb300a1a7eb2c",
            "egress": [],
            "id": "acl-05a0bb300a1a7eb2c",
            "ingress": [],
            "owner_id": "984601295324",
            "subnet_ids": [
              "subnet-07e16cc0df6899d94",
              "subnet-0d8e6f62c6988a94c",
              "subnet-0dbd65dac65934404"
            ],
            "tags": {
              "Name": "dev-demo-vpc-public-nacl"
            },
            "tags_all": {
              "Name": "dev-demo-vpc-public-nacl"
            },
            "vpc_id": "vpc-0892a97c16bd1e930"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "public_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "cidr_block": "172.16.0.0/12",
            "egress": false,
            "from_port": 0,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-94468807",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-05a0bb300a1a7eb2c",
            "protocol": "-1",
            "rule_action": "allow",
            "rule_number": 100,
            "to_port": 0
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_network_acl.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": false,
            "from_port": 22,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-2573600251",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-05a0bb300a1a7eb2c",
            "protocol": "6",
            "rule_action": "deny",
            "rule_number": 110,
            "to_port": 22
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_network_acl.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": false,
            "from_port": 23,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-615278901",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-05a0bb300a1a7eb2c",
            "protocol": "6",
            "rule_action": "deny",
            "rule_number": 120,
            "to_port": 23
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_network_acl.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": false,
            "from_port": 1433,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-4181373104",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-05a0bb300a1a7eb2c",
            "protocol": "6",
            "rule_action": "deny",
            "rule_number": 130,
            "to_port": 1433
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_network_acl.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": false,
            "from_port": 1521,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-2219423464",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-05a0bb300a1a7eb2c",
            "protocol": "6",
            "rule_action": "deny",
            "rule_number": 140,
            "to_port": 1521
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_network_acl.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 5,
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": false,
            "from_port": 3306,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-1507815277",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-05a0bb300a1a7eb2c",
            "protocol": "6",
            "rule_action": "deny",
            "rule_number": 150,
            "to_port": 3306
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_network_acl.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 6,
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": false,
            "from_port": 3389,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-3826582435",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-05a0bb300a1a7eb2c",
            "protocol": "6",
            "rule_action": "deny",
            "rule_number": 160,
            "to_port": 3389
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_network_acl.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 7,
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": false,
            "from_port": 5432,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-964942374",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-05a0bb300a1a7eb2c",
            "protocol": "6",
            "rule_action": "deny",
            "rule_number": 170,
            "to_port": 5432
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_network_acl.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 8,
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": false,
            "from_port": 5439,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-519245587",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-05a0bb300a1a7eb2c",
            "protocol": "6",
            "rule_action": "deny",
            "rule_number": 180,
            "to_port": 5439
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_network_acl.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 9,
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": false,
            "from_port": 0,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-3094025737",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-05a0bb300a1a7eb2c",
            "protocol": "-1",
            "rule_action": "allow",
            "rule_number": 200,
            "to_port": 0
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_network_acl.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "public_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": true,
            "from_port": 0,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-2705347704",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-05a0bb300a1a7eb2c",
            "protocol": "-1",
            "rule_action": "allow",
            "rule_number": 100,
            "to_port": 0
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_network_acl.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0d57417526f321380",
            "id": "r-rtb-0bfeafdfe89c8abfc1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0bfeafdfe89c8abfc",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0d57417526f321380",
            "id": "r-rtb-0da77382911b38de11080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0da77382911b38de1",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0d57417526f321380",
            "id": "r-rtb-0d32ba3106ce7bb601080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0d32ba3106ce7bb60",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:984601295324:route-table/rtb-086d461f4308679e0",
            "id": "rtb-086d461f4308679e0",
            "owner_id": "984601295324",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "dev-demo-vpc-dev-private-route-table-1a"
            },
            "tags_all": {
              "Name": "dev-demo-vpc-dev-private-route-table-1a"
            },
            "timeouts": null,
            "vpc_id": "vpc-0892a97c16bd1e930"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:984601295324:route-table/rtb-0350b573649f04252",
            "id": "rtb-0350b573649f04252",
            "owner_id": "984601295324",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "dev-demo-vpc-dev-private-route-table-1b"
            },
            "tags_all": {
              "Name": "dev-demo-vpc-dev-private-route-table-1b"
            },
            "timeouts": null,
            "vpc_id": "vpc-0892a97c16bd1e930"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:984601295324:route-table/rtb-09cdf5a1a2d9fecb2",
            "id": "rtb-09cdf5a1a2d9fecb2",
            "owner_id": "984601295324",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "dev-demo-vpc-dev-private-route-table-1c"
            },
            "tags_all": {
              "Name": "dev-demo-vpc-dev-private-route-table-1c"
            },
            "timeouts": null,
            "vpc_id": "vpc-0892a97c16bd1e930"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "protected",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:984601295324:route-table/rtb-05427dbc91904d3a8",
            "id": "rtb-05427dbc91904d3a8",
            "owner_id": "984601295324",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "dev-demo-vpc-dev-protected-route-table-1a"
            },
            "tags_all": {
              "Name": "dev-demo-vpc-dev-protected-route-table-1a"
            },
            "timeouts": null,
            "vpc_id": "vpc-0892a97c16bd1e930"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:984601295324:route-table/rtb-0e6b335303ed3b75a",
            "id": "rtb-0e6b335303ed3b75a",
            "owner_id": "984601295324",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "dev-demo-vpc-dev-protected-route-table-1b"
            },
            "tags_all": {
              "Name": "dev-demo-vpc-dev-protected-route-table-1b"
            },
            "timeouts": null,
            "vpc_id": "vpc-0892a97c16bd1e930"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:984601295324:route-table/rtb-0d0b4ff59907d4097",
            "id": "rtb-0d0b4ff59907d4097",
            "owner_id": "984601295324",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "dev-demo-vpc-dev-protected-route-table-1c"
            },
            "tags_all": {
              "Name": "dev-demo-vpc-dev-protected-route-table-1c"
            },
            "timeouts": null,
            "vpc_id": "vpc-0892a97c16bd1e930"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:984601295324:route-table/rtb-0bfeafdfe89c8abfc",
            "id": "rtb-0bfeafdfe89c8abfc",
            "owner_id": "984601295324",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "dev-demo-vpc-dev-public-route-table-1a"
            },
            "tags_all": {
              "Name": "dev-demo-vpc-dev-public-route-table-1a"
            },
            "timeouts": null,
            "vpc_id": "vpc-0892a97c16bd1e930"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:984601295324:route-table/rtb-0da77382911b38de1",
            "id": "rtb-0da77382911b38de1",
            "owner_id": "984601295324",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "dev-demo-vpc-dev-public-route-table-1b"
            },
            "tags_all": {
              "Name": "dev-demo-vpc-dev-public-route-table-1b"
            },
            "timeouts": null,
            "vpc_id": "vpc-0892a97c16bd1e930"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:984601295324:route-table/rtb-0d32ba3106ce7bb60",
            "id": "rtb-0d32ba3106ce7bb60",
            "owner_id": "984601295324",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "dev-demo-vpc-dev-public-route-table-1c"
            },
            "tags_all": {
              "Name": "dev-demo-vpc-dev-public-route-table-1c"
            },
            "timeouts": null,
            "vpc_id": "vpc-0892a97c16bd1e930"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-080193d0a7ea4ea2a",
            "route_table_id": "rtb-086d461f4308679e0",
            "subnet_id": "subnet-0a6b1e2b031e51e6c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-009e60f6b9c1bff05",
            "route_table_id": "rtb-0350b573649f04252",
            "subnet_id": "subnet-0289b6d889b829956"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0eedee02399734d2d",
            "route_table_id": "rtb-09cdf5a1a2d9fecb2",
            "subnet_id": "subnet-07148de2c755cce6e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "protected",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ea12b793b220dab5",
            "route_table_id": "rtb-05427dbc91904d3a8",
            "subnet_id": "subnet-07aa8323622c44eda"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.protected",
            "module.vpc.aws_subnet.protected",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07fe67c4be96322f6",
            "route_table_id": "rtb-0e6b335303ed3b75a",
            "subnet_id": "subnet-02810260634089b6e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.protected",
            "module.vpc.aws_subnet.protected",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fa1c6cfd33a4c24b",
            "route_table_id": "rtb-0d0b4ff59907d4097",
            "subnet_id": "subnet-05b721583f8f606a1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.protected",
            "module.vpc.aws_subnet.protected",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-033ad728e8bb8df91",
            "route_table_id": "rtb-0bfeafdfe89c8abfc",
            "subnet_id": "subnet-0dbd65dac65934404"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02ea434fb7b41d26c",
            "route_table_id": "rtb-0da77382911b38de1",
            "subnet_id": "subnet-07e16cc0df6899d94"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fadbe8f2d83cbc94",
            "route_table_id": "rtb-0d32ba3106ce7bb60",
            "subnet_id": "subnet-0d8e6f62c6988a94c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:984601295324:subnet/subnet-0a6b1e2b031e51e6c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "172.16.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a6b1e2b031e51e6c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "984601295324",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-demo-vpc-dev-private-subnet-1a"
            },
            "tags_all": {
              "Name": "dev-demo-vpc-dev-private-subnet-1a"
            },
            "vpc_id": "vpc-0892a97c16bd1e930"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:984601295324:subnet/subnet-0289b6d889b829956",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "172.16.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0289b6d889b829956",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "984601295324",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-demo-vpc-dev-private-subnet-1b"
            },
            "tags_all": {
              "Name": "dev-demo-vpc-dev-private-subnet-1b"
            },
            "vpc_id": "vpc-0892a97c16bd1e930"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:984601295324:subnet/subnet-07148de2c755cce6e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1c",
            "availability_zone_id": "euc1-az1",
            "cidr_block": "172.16.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07148de2c755cce6e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "984601295324",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-demo-vpc-dev-private-subnet-1c"
            },
            "tags_all": {
              "Name": "dev-demo-vpc-dev-private-subnet-1c"
            },
            "vpc_id": "vpc-0892a97c16bd1e930"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "protected",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:984601295324:subnet/subnet-07aa8323622c44eda",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "172.16.2.0/25",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07aa8323622c44eda",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "984601295324",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-demo-vpc-dev-protected-subnet-1a"
            },
            "tags_all": {
              "Name": "dev-demo-vpc-dev-protected-subnet-1a"
            },
            "vpc_id": "vpc-0892a97c16bd1e930"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:984601295324:subnet/subnet-02810260634089b6e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "172.16.2.128/25",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02810260634089b6e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "984601295324",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-demo-vpc-dev-protected-subnet-1b"
            },
            "tags_all": {
              "Name": "dev-demo-vpc-dev-protected-subnet-1b"
            },
            "vpc_id": "vpc-0892a97c16bd1e930"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:984601295324:subnet/subnet-05b721583f8f606a1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1c",
            "availability_zone_id": "euc1-az1",
            "cidr_block": "172.16.3.0/25",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05b721583f8f606a1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "984601295324",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-demo-vpc-dev-protected-subnet-1c"
            },
            "tags_all": {
              "Name": "dev-demo-vpc-dev-protected-subnet-1c"
            },
            "vpc_id": "vpc-0892a97c16bd1e930"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:984601295324:subnet/subnet-0dbd65dac65934404",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "172.16.0.0/25",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0dbd65dac65934404",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "984601295324",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-demo-vpc-dev-public-subnet-1a"
            },
            "tags_all": {
              "Name": "dev-demo-vpc-dev-public-subnet-1a"
            },
            "vpc_id": "vpc-0892a97c16bd1e930"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:984601295324:subnet/subnet-07e16cc0df6899d94",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "172.16.0.128/25",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07e16cc0df6899d94",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "984601295324",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-demo-vpc-dev-public-subnet-1b"
            },
            "tags_all": {
              "Name": "dev-demo-vpc-dev-public-subnet-1b"
            },
            "vpc_id": "vpc-0892a97c16bd1e930"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:984601295324:subnet/subnet-0d8e6f62c6988a94c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1c",
            "availability_zone_id": "euc1-az1",
            "cidr_block": "172.16.1.0/25",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d8e6f62c6988a94c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "984601295324",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-demo-vpc-dev-public-subnet-1c"
            },
            "tags_all": {
              "Name": "dev-demo-vpc-dev-public-subnet-1c"
            },
            "vpc_id": "vpc-0892a97c16bd1e930"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:984601295324:vpc/vpc-0892a97c16bd1e930",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.16.0.0/21",
            "default_network_acl_id": "acl-07cc2d5695cb09a6b",
            "default_route_table_id": "rtb-0463656dc38a46cc9",
            "default_security_group_id": "sg-0417b505b51f66b98",
            "dhcp_options_id": "dopt-81e242e9",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0892a97c16bd1e930",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0463656dc38a46cc9",
            "owner_id": "984601295324",
            "tags": {
              "Name": "dev-demo-vpc"
            },
            "tags_all": {
              "Name": "dev-demo-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}